--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -14,7 +14,7 @@
     <h1 id="title"> The Title </h1>
     <p id="description"> Some description</p>
     <form action="", id="survey-form"></form>
-    <input type="text" name="" id="name"  placeholder="Write your name" required>
+    <input type="text" name="" id="name">
 
 
     <script  src="js/index.js"></script>
