--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -16,6 +16,7 @@
     <form action="" id="survey-form">
 
     </form>
+    <label for="name" id="name-label" > name :</label>
     <input type="text" name="" id="name">
     <input type="email" name="" id="email">
     <input type="number" name="" id="number" min="0" max="20">
