--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -18,6 +18,7 @@
     </form>
     <label for="name" id="name-label" > name :</label>
     <input type="text" name="" id="name">
+    <label for="email" id="email-label"> email :</label>
     <input type="email" name="" id="email">
     <input type="number" name="" id="number" min="0" max="20">
 
