--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -20,6 +20,7 @@
     <input type="text" name="" id="name">
     <label for="email" id="email-label"> email :</label>
     <input type="email" name="" id="email">
+    <label for="number" id="number-label"> number :</label>
     <input type="number" name="" id="number" min="0" max="20">
 
     <script  src="js/index.js"></script>
