--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -17,7 +17,7 @@
 
     </form>
     <label for="name" id="name-label" > name :</label>
-    <input type="text" name="" id="name">
+    <input type="text" name="" id="name" placeholder="Write your name" >
     <label for="email" id="email-label"> email :</label>
     <input type="email" name="" id="email">
     <label for="number" id="number-label"> number :</label>
