--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -19,7 +19,7 @@
     <label for="name" id="name-label" > name :</label>
     <input type="text" name="" id="name" placeholder="Write your name" >
     <label for="email" id="email-label"> email :</label>
-    <input type="email" name="" id="email">
+    <input type="email" name="" id="email"  placeholder="Write your email">
     <label for="number" id="number-label"> number :</label>
     <input type="number" name="" id="number" min="0" max="20">
 
