--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -22,6 +22,13 @@
     <input type="email" name="" id="email"  placeholder="Write your email">
     <label for="number" id="number-label"> number :</label>
     <input type="number" name="" id="number" min="0" max="20">
+    <br>
+    <select name="" id="dropdown">
+      <option value="something">something</option>
+      <option value="something 2">something 2</option>
+      <option value="something 3">something 3</option>
+    </select>
+    <br>
 
     <script  src="js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
