--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
   </head>
 
   <body>
@@ -13,25 +11,36 @@
 
     <h1 id="title"> The Title </h1>
     <p id="description"> Some description</p>
-    <form action="" id="survey-form">
 
+    <form action="" id="survey-form">
+      <label for="name" id="name-label" > name :</label>
+      <input type="text" name="" id="name"  placeholder="Write your name" required>
+      <label for="email" id="email-label"> email :</label>
+      <input type="email" name="" id="email"  placeholder="Write your email" required>
+      <label for="number" id="number-label"> number :</label>
+      <input type="number" name="" id="number" min="0" max="20" placeholder="Write your number" required>
+      <br>
+      <select name="" id="dropdown">
+        <option value="something">something</option>
+        <option value="something 2">something 2</option>
+        <option value="something 3">something 3</option>
+      </select>
+      <br>
+      <input type="radio" name="name" id="" value="1">
+      <input type="radio" name="name" id="" value="2">
+      <input type="radio" name="name" id="" value="3">
+      <br>
+      <input type="checkbox" name="" id="" value="first">
+      <input type="checkbox" name="" id="" value="second">
+      <input type="checkbox" name="" id="" value="third">
+      <br>
+      <textarea id="w3review" name="textarea" rows="4" cols="50">
+          Write your comments.
+      </textarea>
+      <br>
+      <button id="submit">submit</button>
     </form>
-    <label for="name" id="name-label" > name :</label>
-    <input type="text" name="" id="name" placeholder="Write your name" >
-    <label for="email" id="email-label"> email :</label>
-    <input type="email" name="" id="email"  placeholder="Write your email">
-    <label for="number" id="number-label"> number :</label>
-    <input type="number" name="" id="number" min="0" max="20">
-    <br>
-    <select name="" id="dropdown">
-      <option value="something">something</option>
-      <option value="something 2">something 2</option>
-      <option value="something 3">something 3</option>
-    </select>
-    <br>
 
     <script  src="js/index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
   </body>
 </html>
